Saludo agregado javascript

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primera Pagina con Git</title>
     <link rel="stylesheet" href="css/estilos.css" type="text/css">
+    <script src="js/javascritp.js"></script>
 </head>
 <body>
     <h1>Proyecto Empresarial</h1>
     <p>Parrafo agregado desde Github</p>
+    <input type="button" onclick="saludo()" value="Dale ya">
 </body>
 </html>
