--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
     <h1>Proyecto Empresarial</h1>
     <p>Parrafo agregado desde Github</p>
+
+    <p>Este es otro parrafo</p>
+    
 </body>
 </html>
